--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "codeigniter4/framework": "^4.0",
         "firebase/php-jwt": "^6.3",
         "xendit/xendit-php": "^2.19",
-        "google/recaptcha": "^1.2"
+        "google/recaptcha": "^1.2",
+        "midtrans/midtrans-php": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
