--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "firebase/php-jwt": "^6.3",
         "xendit/xendit-php": "^2.19",
         "google/recaptcha": "^1.2",
-        "midtrans/midtrans-php": "^2.5"
+        "midtrans/midtrans-php": "^2.5",
+        "guzzlehttp/guzzle": "^7.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
