--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "codeigniter4/framework": "^4.0",
+        "codeigniter4/framework": "4.3.8",
         "firebase/php-jwt": "^6.3",
         "xendit/xendit-php": "^2.19",
         "google/recaptcha": "^1.2",
