--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,19 @@ services:
     container_name: 'iDerm4U-Database'
     restart: unless-stopped
     volumes:
+      - /iderm4u-storage/db-export/:/db-export
       - iderm4u-database-storage:/var/lib/postgresql/data
     networks:
       - iderm4u-network
 
   iDerm4U-Main:
-    image: angkringan.ibrain2u.com/iderm4u-main:3.0
+    image: angkringan.ibrain2u.com/iderm4u-main:3.1
     restart: unless-stopped
     container_name: 'iDerm4U-MainApp'
     networks:
       - iderm4u-network
     ports:
-      - "0.0.0.0:8080:8080"
+      - "0.0.0.0:8008:8080"
     depends_on:
       - iDerm4U-Database
     volumes:
