--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,8 @@
 [supervisord]
-nodaemon = true
+nodaemon=true
 user=root
+logfile=/dev/stdout
+logfile_maxbytes = 0
 
 [program:caddy]
 command=caddy reverse-proxy --from :8080 --to 127.0.0.1:8081
@@ -8,6 +10,9 @@ autorestart=true
 priority=10
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
+redirect_stderr=true
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
 user=iderm4u
 
 [program:iderm4u]
