change the target to localhost

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/dev/stdout
 logfile_maxbytes = 0
 
 [program:caddy]
-command=caddy reverse-proxy --from :8080 --to 127.0.0.1:8081
+command=caddy reverse-proxy --from :8080 --to localhost:8081
 autorestart=true
 priority=10
 stdout_logfile=/dev/stdout
